--- a/content/07.contributions.md
+++ b/content/07.contributions.md
@@ -7,10 +7,10 @@
 * Formal Analysis: J.A.B.
 * Software: J.A.B., Y.Z.
 * Methodology: J.A.B., Y.Z.
-* Validation: J.A.B.
+* Validation: J.A.B., Y.O., I.G.
 * Data Curation: J.A.B., T.C.W.
 * Resources: J.A.B., J.C., B.W., J.R.
 * Funding Acquisition: J.A.B., J.C., B.W., J.R.
 * Writing - Original Draft Preparation: J.A.B.
-* Writing - Review & Editing: J.A.B., Y.Z., T.C.W., Y.O., S.N.M., T.V., J.C., B.W., J.R.
+* Writing - Review & Editing: J.A.B., Y.Z., T.C.W., Y.O., S.N.M., T.V., I.G., J.C., B.W., J.R.
 * Visualization: J.A.B.
